--- a/wiki.css
+++ b/wiki.css
@@ -7,6 +7,7 @@
   left: 0;
   background-color: #0077C8; 
   overflow-x: hidden; /* disable horizontal scroll */
+  padding-top: 5px;
 }
 
 /* nav menu links */
