--- a/wiki.css
+++ b/wiki.css
@@ -12,7 +12,7 @@
 
 /* nav menu links */
 .sidenav a {
-  padding: 2px 8px 6px 2px;
+  padding: 0 8px 6px 0;
   text-decoration: none;
   font-family: Arial;
   font-size: 15px;
