--- a/wiki.css
+++ b/wiki.css
@@ -8,6 +8,7 @@
   background-color: #0077CB; 
   overflow-x: hidden; /* disable horizontal scroll */
   padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 /* nav menu links one */
