--- a/wiki.css
+++ b/wiki.css
@@ -15,7 +15,7 @@
 .sidenav a {
   padding: 6px 8px 6px 16px;
   text-decoration: none;
-  font-family: Arial;
+  font-family: Times New Roman;
   font-size: 20px;
   color: #ffffff;
   display: block;
