--- a/wiki.css
+++ b/wiki.css
@@ -13,9 +13,9 @@
 
 /* nav menu links one */
 .sidenav a {
-  padding: 6px 8px 6px 16px;
+  padding: 6px 6px 6px 16px;
   text-decoration: none;
-  font-family: Times New Roman;
+  font-family: "Times New Roman";
   font-size: 20px;
   color: #ffffff;
   display: block;
