--- a/wiki.css
+++ b/wiki.css
@@ -31,6 +31,21 @@
   margin-left: 250px;
 }
 
+/* page */
 body {
   background-color: black;
 }
+
+.box {
+  width: 100px;
+  height 100px;
+  margin-left: 250px;
+  padding: 20px 20px 20px 20px;
+  background-color: white;
+}
+
+
+
+
+
+
