--- a/wiki.css
+++ b/wiki.css
@@ -35,4 +35,14 @@ body {
   background-color: #000000;
 }
 
+/* right blinkie bar */
+.sidebar
+  width: 200px;
+  position: fixed; 
+  top: 20px; 
+  left: 20px;
+  overflow-x: hidden; 
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
 
