--- a/wiki.css
+++ b/wiki.css
@@ -40,7 +40,8 @@ body {
   width: 200px;
   position: fixed; 
   top: 20px; 
-  left: 20px;
+  right: 20px;
+  float: right;
   overflow-x: hidden; 
   padding-top: 5px;
   padding-bottom: 5px;
