--- a/wiki.css
+++ b/wiki.css
@@ -38,14 +38,10 @@ body {
 /* blinkie bar */
 .sidebar {
   width: 200px;
-  position: fixed; 
+   z-index: 1;
   top: 500px; 
   left: 20px;
   overflow-x: hidden; 
   padding-top: 5px;
   padding-bottom: 5px;
-}
-
-.sidebar img {
-  display: block;
 }
