--- a/wiki.css
+++ b/wiki.css
@@ -35,13 +35,13 @@ body {
   background-color: #000000;
 }
 
-/* blinkie bar */
 .sidebar {
   width: 200px;
-  z-index: 1;
-  top: 500px; 
+  position: fixed; 
+  z-index: 0; 
+  top: 20px; 
   left: 20px;
-  overflow-x: hidden; 
+  overflow-x: hidden; /* disable horizontal scroll */
   padding-top: 5px;
   padding-bottom: 5px;
 }
