--- a/wiki.css
+++ b/wiki.css
@@ -35,3 +35,12 @@ body {
   background-color: #000000;
 }
 
+.sidebar {
+  width: 200px;
+  z-index: -1;
+  top: 20px; 
+  right: 20px;
+  overflow-x: hidden; /* disable horizontal scroll */
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
